Fix Page grid so text fills viewport on mobile
Instead of `auto` for the empty column, use `1fr` to ensure it shrinks
to nothing on smaller screens and prevents the text from wrapping
unnecessarily

--- a/_sass/scopes/_s-page.scss
+++ b/_sass/scopes/_s-page.scss
@@ -8,7 +8,7 @@
 
 .s-page .page-content {
   display: grid;
-  grid-template-columns: [full-start content-start] minmax(auto, 70ch) [content-end] auto [full-end];
+  grid-template-columns: [full-start content-start] minmax(auto, 70ch) [content-end] 1fr [full-end];
   grid-auto-rows: min-content;
 }
 
